--- a/drinks/index.html
+++ b/drinks/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/main.css"></link>
-    <title>Drink Creations</title>
+    <title>No Where Bar Drink Creator</title>
 </head>
 <body>
     <main>
-        <h1 class="">App to list drinks, their ingredients, and instructions</h1>
+        <h1 class=""></h1>
         <p>Enter you drink selection below</p>
         <input type="text" placeholder="Enter you selection here" id="drinkText"></input>
         <input type="submit" id="enterButton" value="Click here to display selctions"></input>
