Added functionality to cards
Added functionality to cards to display on screen

--- a/blackJack/index.html
+++ b/blackJack/index.html
@@ -8,17 +8,26 @@
     <title>Blackjack App</title>
 </head>
 <body>
-    <section class="top">
+    <section>
         <h2> DEALER </h2>
-        <img src = 'assets/images/backOfCard.png' id = 'dealerFirstCard'>
-        <img src = '' id="dealerSecondCard">
     </section>
-    <section class="bottom">
+    <section class="top" id="top">
+        <!-- <img src = 'assets/images/backOfCard.png' id = 'dealerFirstCard'>
+        <img src = '' id="dealerSecondCard"> -->
+    </section>
+    <section>
         <h2> PLAYER </h2>
-        <input type="submit" value="Deal The Cards" id="deal">
-        <img src = '' id="playerFirstCard">
-        <img src = '' id="playerSecondCard">
     </section>
+    <section class="bottom" id="bottom">
+        <!-- <img src = '' id="playerFirstCard">
+        <img src = '' id="playerSecondCard"> -->
+    </section>
+    <footer>
+        <input type="submit" value="DEAL THE CARDS" id="deal">
+        <input type="submit" value="HIT" id="hit">
+        <input type="submit" value="STAY" id="stay">
+        <input type="submit" value="RESET" id="reset">
+    </footer>
 </body>
 <script src = 'JS/main.js'></script>
 </html>
