Changes to blackjack
added functionality
timer for looping call to API
async await function for call to api
added updates to DOM for player and dealer scores

--- a/blackJack/index.html
+++ b/blackJack/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <section>
-        <h2> DEALER </h2>
+        <h2 id="dealer"> DEALER </h2>
     </section>
     <section class="top" id="top">
         <!-- <img src = 'assets/images/backOfCard.png' id = 'dealerFirstCard'>
         <img src = '' id="dealerSecondCard"> -->
     </section>
     <section>
-        <h2> PLAYER </h2>
+        <h2 id = 'player'> PLAYER </h2>
     </section>
     <section class="bottom" id="bottom">
         <!-- <img src = '' id="playerFirstCard">
