--- a/blackJack/index.html
+++ b/blackJack/index.html
@@ -8,26 +8,29 @@
     <title>Blackjack App</title>
 </head>
 <body>
-    <section>
-        <h2 id="dealer"> DEALER </h2>
-    </section>
+
     <section class="top" id="top">
         <!-- <img src = 'assets/images/backOfCard.png' id = 'dealerFirstCard'>
         <img src = '' id="dealerSecondCard"> -->
     </section>
     <section>
-        <h2 id = 'player'> PLAYER </h2>
+        <h2 id="dealer"> DEALER </h2>
     </section>
     <section class="bottom" id="bottom">
         <!-- <img src = '' id="playerFirstCard">
         <img src = '' id="playerSecondCard"> -->
     </section>
-    <footer>
-        <input type="submit" value="DEAL THE CARDS" id="deal">
-        <input type="submit" value="HIT" id="hit">
-        <input type="submit" value="STAY" id="stay">
-        <input type="submit" value="RESET" id="reset">
-    </footer>
+    <section>
+        <h2 id = 'player'> PLAYER </h2>
+    </section>
+    <section id="half">
+        <footer>
+            <button type="submit" id="deal">DEAL</button>
+            <button type="submit" id="hit"> HIT</button>
+            <button type="submit" id="stay">STAY</button>
+            <!-- <input type="submit" value="RESET" id="reset"> -->
+        </footer>
+    </section>  
 </body>
 <script src = 'JS/main.js'></script>
 </html>
