--- a/blackJack/index.html
+++ b/blackJack/index.html
@@ -23,14 +23,20 @@
     <section>
         <h2 id = 'player'> PLAYER </h2>
     </section>
-    <section id="half">
-        <footer>
+    <section id="footer">
             <button type="submit" id="deal">DEAL</button>
             <button type="submit" id="hit"> HIT</button>
             <button type="submit" id="stay">STAY</button>
             <!-- <input type="submit" value="RESET" id="reset"> -->
-        </footer>
     </section>  
+    <footer>
+        <div>
+            <p id=numberOfHands> Number of hands: </p>
+        </div>
+        <div>
+            <p id=numberOfWins> Number of wins: </p>
+        </div>
+    </footer>
 </body>
 <script src = 'JS/main.js'></script>
 </html>
