--- a/blackJack/index.html
+++ b/blackJack/index.html
@@ -32,9 +32,8 @@
     <footer>
         <div>
             <p id=numberOfHands> Number of hands: </p>
-        </div>
-        <div>
             <p id=numberOfWins> Number of wins: </p>
+            <p id=handsPushed> Number of pushes: </p>
         </div>
     </footer>
 </body>
