blackjack css update
updates to css for media queries to improve appearance on mobile devices

--- a/blackJack/index.html
+++ b/blackJack/index.html
@@ -31,9 +31,9 @@
     </section>  
     <footer>
         <div>
-            <p id=numberOfHands> Number of hands: </p>
-            <p id=numberOfWins> Number of wins: </p>
-            <p id=handsPushed> Number of pushes: </p>
+            <p id=numberOfHands> Hands played: </p>
+            <p id=numberOfWins> Wins: </p>
+            <p id=handsPushed> Pushes: </p>
         </div>
     </footer>
 </body>
