--- a/blackJack/index.html
+++ b/blackJack/index.html
@@ -31,7 +31,7 @@
     </section>  
     <footer>
         <div>
-            <p id=numberOfHands> Hands played: </p>
+            <p id=numberOfHands> Hands: </p>
             <p id=numberOfWins> Wins: </p>
             <p id=handsPushed> Pushes: </p>
         </div>
