--- a/blackJack/index.html
+++ b/blackJack/index.html
@@ -10,11 +10,13 @@
 <body>
 
     <section class="top" id="top">
-        <!-- <img src = 'assets/images/backOfCard.png' id = 'dealerFirstCard'>
-        <img src = '' id="dealerSecondCard"> -->
+        <p id="rules">PLEASE READ: Dealer must hit on soft 17. No betting, splitting, or doubling down...yet! Have some fun and throw some cards!</p>
     </section>
     <section>
         <h2 id="dealer"> DEALER </h2>
+    </section>
+    <section>
+        
     </section>
     <section class="bottom" id="bottom">
         <!-- <img src = '' id="playerFirstCard">
