--- a/blackJack2/index.html
+++ b/blackJack2/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <section class="top" id="top">
+    <section class="top" id="dealerTwo">
         <p id="rules">PLEASE READ: Dealer must hit on soft 17. No betting, splitting, or doubling down...yet! Have some fun and throw some cards!</p>
     </section>
     <section>
@@ -18,7 +18,7 @@
     <section>
         
     </section>
-    <section class="bottom" id="bottom">
+    <section class="bottom" id="playerTwo">
         <!-- <img src = '' id="playerFirstCard">
         <img src = '' id="playerSecondCard"> -->
     </section>
