--- a/blackJack2/index.html
+++ b/blackJack2/index.html
@@ -8,9 +8,11 @@
     <title>Blackjack App</title>
 </head>
 <body>
-
+    <section  id="rules">
+        <p>PLEASE READ: Dealer must hit on soft 17. No betting, splitting, or doubling down...yet! Have some fun and throw some cards!</p>
+    </section>
     <section class="top" id="dealerImages">
-        <p id="rules">PLEASE READ: Dealer must hit on soft 17. No betting, splitting, or doubling down...yet! Have some fun and throw some cards!</p>
+        
     </section>
     <section>
         <h2 id="dealer"> DEALER </h2>
