--- a/blackJack2/index.html
+++ b/blackJack2/index.html
@@ -12,17 +12,11 @@
         <p>PLEASE READ: Dealer must hit on soft 17. No betting, splitting, or doubling down...yet! Have some fun and throw some cards!</p>
     </section>
     <section class="top" id="dealerImages">
-        
     </section>
     <section>
         <h2 id="dealer"> DEALER </h2>
     </section>
-    <section>
-        
-    </section>
     <section class="bottom" id="playerImages">
-        <!-- <img src = '' id="playerFirstCard">
-        <img src = '' id="playerSecondCard"> -->
     </section>
     <section>
         <h2 id = 'player'> PLAYER </h2>
@@ -32,7 +26,8 @@
             <button type="submit" id="hit"> HIT</button>
             <button type="submit" id="stay">STAY</button>
             <!-- <input type="submit" value="RESET" id="reset"> -->
-    </section>  
+    </section> 
+    <div></div> 
     <footer>
         <div>
             <p id=numberOfHands> Hands: </p>
