--- a/WIM/Inventory.html
+++ b/WIM/Inventory.html
@@ -12,8 +12,17 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		
-
+		<header>
+			<h1>
+				Tire Co. Workflow and Inventory Management
+			</h1>
+			<button type="submit" id="signOut">Sign out as </button>
+		</header>
+		<section>
+			<button>Add Inventory</button>
+			<button>Remove Inventory</button>
+			<button>Search Inventory</button>
+		</section>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
