--- a/WIM/frontCounterLanding.html
+++ b/WIM/frontCounterLanding.html
@@ -2,18 +2,27 @@
 <html lang="en">
 	<head>
     	<meta charset="utf-8">
-    	<meta name="description" content="This is where your description goes">
-    	<meta name="keywords" content="one, two, three">
+    	<meta name="description" content="Front Counter landing page">
+    	<meta name="keywords" content="">
 
-		<title>Title in the tab</title>
+		<title>Front Counter Landing Page</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		
-
+		<header>
+			<h1>
+				Tire Co. Workflow and Inventory Management
+			</h1>
+			<button type="submit" id="signOut">Sign out as </button>
+		</header>
+		<section>
+			<button>Open Ticket</button>
+			<button>Close Ticket</button>
+			<button>Inventory</button>
+		</section>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
