--- a/college-by-state/index.html
+++ b/college-by-state/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Please use localhost:8000/api/state to get JSON data from the API</h1>
+    <p>If you misspell the state, you will get the {object: unknown} object back. Please check your spelling and try again.</p>
 </body>
 </html>
