completed college-by-state api

--- a/college-by-state/index.html
+++ b/college-by-state/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Please use localhost:8000/api/state to get JSON data from the API</h1>
+    <h1>https://college-by-state2.herokuapp.com/api/<em>state</em> to get JSON data from the API</h1>
     <p>If you misspell the state, you will get the {object: unknown} object back. Please check your spelling and try again.</p>
 </body>
 </html>
